--- a/apps/site/src/pages/projects/index.astro
+++ b/apps/site/src/pages/projects/index.astro
@@ -19,12 +19,10 @@ const constructedSeo: metaSEO = {
         image: null,
     },
 };
-
-
 ---
 
 <Layout seo={constructedSeo}>
-    <section class='flex flex-col w-full relative'>
+    <section class='flex flex-col w-full relative pb-12'>
         <div class='sw-container flex flex-col space-y-10'>
             <div class='flex flex-col py-8 space-y-4'>
                 <header class='flex flex-col space-y-2'>
