--- a/apps/site/src/components/widgets/Project/Description/Description.astro
+++ b/apps/site/src/components/widgets/Project/Description/Description.astro
@@ -6,18 +6,22 @@ export interface Props {
     project: ProcessedProject;
 }
 
-const {
-    project,
-} = Astro.props as Props;
+const { project } = Astro.props as Props;
 
-const content = project.data.content;
-const html = marked.parse(content);
+console.log(project);
+
+const description = project.data.description || '';
+const html = marked.parse(description);
 ---
 
 <section class='sw-halftone relative w-full bg-surface-dim pb-12 text-primary'>
-    <div class='sw-container py-12 md:py-16'>
-        <article class='text-on-surface space-y-4'>
-            <Fragment set:html={html} />
-        </article>
-    </div>
+    { description &&
+        (
+            <div class='sw-container py-12 md:py-16'>
+                <article class='text-on-surface space-y-4'>
+                    <Fragment set:html={html} />
+                </article>
+            </div>
+        )
+    }
 </section>
