fixing astro checks

--- a/apps/site/src/components/common/Header/Header.astro
+++ b/apps/site/src/components/common/Header/Header.astro
@@ -1,10 +1,9 @@
 ---
-import ButtonToggleMenu from '@common/ButtonToggleMenu';
+// import ButtonToggleMenu from '@common/ButtonToggleMenu';
 import ButtonToggleTheme from '@common/ButtonToggleTheme';
 import { Logo } from '@icons/Brand';
 
 import { cn } from '@lib/utils';
-import Link from './Link.astro';
 
 export interface Props {
     className?: string;
