--- a/apps/site/src/components/widgets/Portfolio/Projects/Projects.astro
+++ b/apps/site/src/components/widgets/Portfolio/Projects/Projects.astro
@@ -1,6 +1,6 @@
 ---
 import { ProjectGallery } from '@common/ProjectsGallery';
-import { getAllProjects, type ProcessedProject } from '@lib/collections/projectHelpers';
+import { getAllProjects } from '@lib/collections/projectHelpers';
 import { cn } from '@lib/utils';
 
 const projects = await getAllProjects();
