--- a/apps/site/src/layouts/BaseLayout.astro
+++ b/apps/site/src/layouts/BaseLayout.astro
@@ -23,6 +23,9 @@ const { seo } = Astro.props as Props;
             define:vars={{ getInitialThemeFn: getInitialTheme.toString(), applyThemeFn: applyTheme.toString() }}
         >
             (function () {
+                let getInitialThemeFn;
+                let applyThemeFn;
+
                 const getInitialTheme = eval(`(${getInitialThemeFn})`);
                 const applyTheme = eval(`(${applyThemeFn})`);
                 const theme = getInitialTheme();
