--- a/apps/site/src/components/common/Footer/Footer.astro
+++ b/apps/site/src/components/common/Footer/Footer.astro
@@ -1,4 +1,5 @@
 ---
+import { SiteSocials } from '@common/SiteSocials';
 ---
 <footer class='relative flex flex-col w-full pt-8 text-sm items-center bg-surface text-on-surface shadow-2xl'>
     <div class="absolute -top-6 h-8 z-10 flex flex-col w-full text-sm items-center bg-surface text-on-surface"
@@ -16,12 +17,7 @@
         </div>
         <div class='flex-col space-y-4'>
             <h5 class='uppercase font-bold'>@spacewiz</h5>
-            <ul>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-                <li>Item 4</li>
-            </ul>
+            <SiteSocials />
         </div>
         <div class='flex-col space-y-4'>
             <h5 class='uppercase font-bold'>Lenga Lenga Jurídico</h5>
