--- a/apps/site/src/components/common/Footer/Footer.astro
+++ b/apps/site/src/components/common/Footer/Footer.astro
@@ -6,26 +6,24 @@ import { SiteSocials } from '@common/SiteSocials';
     style='clip-path: polygon(0 0, calc(50% - 48px) 0, 50% 1.25rem, calc(50% + 48px) 0, 100% 0, 100% 100%, 0 100%);'
     ></div>
     <div class='flex flex-row sw-container justify-between mt-4'>
-        <div class='flex-col space-y-4'>
+        <!-- <div class='flex-col space-y-4'>
             <h5 class='uppercase font-bold'>Portfolio</h5>
-            <ul>
+            <ul class="pl-0 list-none">
                 <li>Item 1</li>
                 <li>Item 2</li>
                 <li>Item 3</li>
                 <li>Item 4</li>
             </ul>
-        </div>
+        </div> -->
         <div class='flex-col space-y-4'>
             <h5 class='uppercase font-bold'>@spacewiz</h5>
             <SiteSocials />
         </div>
         <div class='flex-col space-y-4'>
             <h5 class='uppercase font-bold'>Lenga Lenga Jurídico</h5>
-            <ul>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-                <li>Item 4</li>
+            <ul class="pl-0 list-none">
+                <li><a href='/terms'>Termos de Uso</a></li>
+                <li><a href='/privacy'>Políticas de Privacidade</a></li>
             </ul>
         </div>
     </div>
