--- a/apps/site/src/components/common/Header/Header.astro
+++ b/apps/site/src/components/common/Header/Header.astro
@@ -33,7 +33,7 @@ const { className } = Astro.props as Props;
         <nav class='flex flex-row justify-between items-center'>
             <div class='flex justify-center gap-4'>
                 <ul class='flex flex-row gap-8 pl-0 items-center'>
-                    <a href={'/projects'}>Projetos</a>
+                    <a href={'/projects'} class='no-underline font-bold'>Projetos</a>
                 </ul>
 
                 <ButtonToggleTheme client:visible />
