--- a/apps/site/src/pages/terms.astro
+++ b/apps/site/src/pages/terms.astro
@@ -4,5 +4,11 @@ import TermsContent from '@content/policies/terms.md';
 ---
 
 <Layout>
-    <TermsContent />
+    <div class='relative flex flex-col bg-surface-bright text-on-surface z-10'>
+        <section class='flex flex-col w-full md:sticky top-0 pt-12 md:py-24'>
+            <div class='sw-container flex flex-col space-y-10 z-10'>
+                <TermsContent />
+            </div>
+        </section>
+    </div>
 </Layout>
