fix: adjust positioning of halftone elements for improved layout consistency

--- a/apps/site/src/components/widgets/Home/Hero/Hero.astro
+++ b/apps/site/src/components/widgets/Home/Hero/Hero.astro
@@ -22,5 +22,5 @@ const { className } = Astro.props as Props;
             class={cn('fixed w-screen h-screen object-cover')}
         />
     </picture>
-    <DividerWave class='absolute w-full bottom-0 text-surface-bright' />
+    <DividerWave class='absolute w-full -bottom-0.5 text-surface-bright' />
 </div>
