--- a/apps/site/src/components/widgets/Project/Hero/Hero.astro
+++ b/apps/site/src/components/widgets/Project/Hero/Hero.astro
@@ -61,7 +61,7 @@ const tags = project.data.category.tags || [];
         </div>
     </header>
     <div
-        class='sw-halftone absolute bottom-0 w-full h-12 md:h-24 bg-surface-dim text-primary z-20'
+        class='sw-halftone absolute -bottom-0.5 w-full h-12 md:h-24 bg-surface-dim text-primary z-20'
         style='clip-path: polygon(100% 100%, 0 100% , 0 0);'
     >
     </div>
