--- a/apps/site/src/pages/index.astro
+++ b/apps/site/src/pages/index.astro
@@ -31,7 +31,7 @@ const title = 'Início';
                 <Products />
             </div>
             <div
-                class='sw-halftone absolute bottom-0 w-full h-24 md:h-56 text-primary bg-surface-dim'
+                class='sw-halftone absolute -bottom-0.5 w-full h-24 md:h-56 text-primary bg-surface-dim'
                 style='clip-path: polygon(0 0, 100% 100%, 0 100%);'
             >
             </div>
@@ -89,7 +89,7 @@ const title = 'Início';
 
         <div class='relative flex flex-col w-full bg-surface-bright'>
             <div
-                class='sw-halftone relative bottom-0 w-full h-24 md:h-56 bg-surface-dim text-primary z-20'
+                class='sw-halftone relative -top-0.5 w-full h-24 md:h-56 bg-surface-dim text-primary z-20'
                 style='clip-path: polygon(100% 100%, 100% 0, 0 0);'
             >
             </div>
