fix: update footer links to include correct policy paths

--- a/apps/site/src/components/common/Footer/Footer.astro
+++ b/apps/site/src/components/common/Footer/Footer.astro
@@ -22,8 +22,8 @@ import { SiteSocials } from '@common/SiteSocials';
         <div class='flex-col space-y-4'>
             <h5 class='uppercase font-bold'>Lenga Lenga Jurídico</h5>
             <ul class="pl-0 list-none">
-                <li><a href='/terms'>Termos de Uso</a></li>
-                <li><a href='/privacy'>Políticas de Privacidade</a></li>
+                <li><a href='/policies/terms'>Termos de Uso</a></li>
+                <li><a href='/policies/privacy'>Políticas de Privacidade</a></li>
             </ul>
         </div>
     </div>
