--- a/apps/site/src/layouts/BaseLayout.astro
+++ b/apps/site/src/layouts/BaseLayout.astro
@@ -28,7 +28,7 @@ const { seo } = Astro.props as Props;
         <MetaTags seo={seo} />
     </head>
 
-    <body class='relative flex flex-col w-full overflow-x-hidden bg-surface-bright'>
+    <body class='relative flex flex-col w-full overflow-x-hidden bg-surface-bright antialiased'>
         <Header />
         <main class='flex flex-col w-full min-h-dvh'>
             <slot />
