feat: add emojis to team and contact section header

--- a/apps/site/src/pages/index.astro
+++ b/apps/site/src/pages/index.astro
@@ -80,7 +80,7 @@ const title = 'Início';
                 <div class='flex flex-col space-y-4'>
                     <header class='flex flex-col space-y-2'>
                         <h2 class='uppercase text-on-surface'>Quem somos</h2>
-                        <h3 class='sw-pulse from-primary to-tertiary'>Essa é a nossa tripulação</h3>
+                        <h3 class='sw-pulse from-primary to-tertiary'>🚀 Essa é a nossa tripulação</h3>
                     </header>
                     <Team />
                 </div>
@@ -100,7 +100,7 @@ const title = 'Início';
                 <div class='flex flex-col space-y-4'>
                     <header class='flex flex-col space-y-2'>
                         <h2 class='uppercase text-on-surface'>Entre em contato</h2>
-                        <h3 class='sw-pulse from-primary to-tertiary'>Queremos ouvir a sua história</h3>
+                        <h3 class='sw-pulse from-primary to-tertiary'>📞 Queremos ouvir a sua história</h3>
                     </header>
                     <Contact />
                 </div>
