feat: add emoji to services header

--- a/apps/site/src/pages/index.astro
+++ b/apps/site/src/pages/index.astro
@@ -26,7 +26,7 @@ const title = 'Início';
             <div class='sw-container flex flex-col space-y-10 z-20'>
                 <header class='flex flex-col space-y-4'>
                     <h2 class='uppercase text-on-surface'>Nossos serviços</h2>
-                    <h3 class='sw-pulse from-primary to-tertiary'>Desenvolvemos ideias</h3>
+                    <h3 class='sw-pulse from-primary to-tertiary'>✨     Desenvolvemos ideias</h3>
                 </header>
                 <Products />
             </div>
