fix: remove unnecessary classes from policy title header

--- a/apps/site/src/pages/policies/[slug].astro
+++ b/apps/site/src/pages/policies/[slug].astro
@@ -28,7 +28,7 @@ const seo = {
         <article class='flex flex-col w-full md:sticky top-0 pt-12 md:py-24'>
             <div class='sw-container flex flex-col space-y-4 z-10'>
                 <header>
-                    <h1 class='sw-display text-primary pb-2'>{policy.data.title}</h1>
+                    <h1>{policy.data.title}</h1>
                 </header>
                 <Content />
             </div>
