fix: fix overflow 4 real

--- a/apps/site/src/pages/index.astro
+++ b/apps/site/src/pages/index.astro
@@ -21,7 +21,7 @@ const title = 'Início';
         </section>
 
         <section
-            class='relative flex flex-col w-full py-6 md:py-12 overflow-visible bg-gradient-to-b from-transparent to-surface-bright'
+            class='relative flex flex-col w-full py-6 md:py-12 overflow-x-hidden bg-gradient-to-b from-transparent to-surface-bright'
         >
             <div class='sw-container flex flex-col space-y-10 z-20'>
                 <header class='flex flex-col space-y-4'>
