--- a/apps/site/src/pages/index.astro
+++ b/apps/site/src/pages/index.astro
@@ -21,12 +21,12 @@ const title = 'Início';
         </section>
 
         <section
-            class='relative flex flex-col w-full py-6 md:py-12 overflow-visible bg-gradient-to-b from-transparent to-surface-bright'
+            class='relative flex flex-col w-full py-6 md:py-12 overflow-x-hidden bg-gradient-to-b from-transparent to-surface-bright'
         >
             <div class='sw-container flex flex-col space-y-10 z-20'>
                 <header class='flex flex-col space-y-4'>
                     <h2 class='uppercase text-on-surface'>Nossos serviços</h2>
-                    <h3 class='sw-pulse from-primary to-tertiary'>Desenvolvemos ideias</h3>
+                    <h3 class='sw-pulse from-primary to-tertiary'>✨     Desenvolvemos ideias</h3>
                 </header>
                 <Products />
             </div>
@@ -80,7 +80,7 @@ const title = 'Início';
                 <div class='flex flex-col space-y-4'>
                     <header class='flex flex-col space-y-2'>
                         <h2 class='uppercase text-on-surface'>Quem somos</h2>
-                        <h3 class='sw-pulse from-primary to-tertiary'>Essa é a nossa tripulação</h3>
+                        <h3 class='sw-pulse from-primary to-tertiary'>🚀 Essa é a nossa tripulação</h3>
                     </header>
                     <Team />
                 </div>
@@ -100,7 +100,7 @@ const title = 'Início';
                 <div class='flex flex-col space-y-4'>
                     <header class='flex flex-col space-y-2'>
                         <h2 class='uppercase text-on-surface'>Entre em contato</h2>
-                        <h3 class='sw-pulse from-primary to-tertiary'>Queremos ouvir a sua história</h3>
+                        <h3 class='sw-pulse from-primary to-tertiary'>📞 Queremos ouvir a sua história</h3>
                     </header>
                     <Contact />
                 </div>
