--- a/apps/site/src/components/widgets/Home/Contact/Contact.astro
+++ b/apps/site/src/components/widgets/Home/Contact/Contact.astro
@@ -30,7 +30,7 @@ const { className } = Astro.props as Props;
                 </p>
 
                 <p>
-                    Mos siga no <a href='https://www.instagram.com/spacewiz.dev/'>Instagram</a>.
+                    Nos siga no <a href='https://www.instagram.com/spacewiz.dev/'>Instagram</a>.
                 </p>
             </div>
         </div>
